# print_api

./: .gitignore  Dockerfile  alembic.ini  deploy-migrate.sh  docker-compose.yml  drive_auth.py  main.py  pyproject.toml  requirements.txt  test_db.db
alembic/: env.py
alembic/versions/: 0363ad74b36e_file_upload_model.py  046a07fc844c_add_order_items_table.py  269be9bbd6b5_i_forgot.py  282017327c11_added_product_rawmaterial_models.py  404c1eb56aff_add_doc_payment_relation.py  43fd3f826861_add_format_to_items_products.py  5822b3cf58a0_add_status_to_order_items.py  598e5321bb7e_add_user_company_relation.py  61175bf78da1_added_the_items_model.py  67e620d8d37d_added_foregin_key_to_company.py  715c85c4f9cc_inital_migration.py  871bc0e4f599_add_finance_doc.py  8e911622db0f_add_the_user_role.py  8fb4b3c34115_added_status_field_to_order.py  a0d8872c5010_add_user_order_relationship.py  af3a6c4c8eb9_add_financial_document_model.py  b81112aa7423_updated_enuls_for_items_orders.py  b9395690841c_added_the_company_model.py  ba1c3b61cc3d_added_the_base_user_model.py  c0e69f7a1cf2_add_payment_method.py  ca18369913a7_added_created_by_to_orders.py  cab9dd1dd7d2_fixed_the_product_model.py  cd69aaf00e38_updated_the_order_model.py  e224da1af1cc_updated_order_and_items.py  e6a897a87d5b_add_company_order_relationship.py  e862c5ed179b_added_folder_status.py  eada99acd781_add_google_drive_folder_id.py
app/: __init__.py
app/auth/: __init__.py  permission_context.py  permission_service.py  permissions_api.py  role_perms_map.py
app/config/: database.py
nginx/: nginx.conf
tests/: contest.py
(+98 files in other folders)
